--- a/PSTAT-131-hw-2.html
+++ b/PSTAT-131-hw-2.html
@@ -421,7 +421,7 @@ variable in the data set. Add <code>age</code> to the data set.</p>
 ## ✖ dplyr::lag()      masks stats::lag()
 ## ✖ yardstick::spec() masks readr::spec()
 ## ✖ recipes::step()   masks stats::step()
-## • Search for functions across packages at https://www.tidymodels.org/find/</code></pre>
+## • Use suppressPackageStartupMessages() to eliminate package startup messages</code></pre>
 <pre class="r"><code>abalone_data &lt;-read.csv(&quot;abalone.csv&quot;)
 
 age &lt;- abalone_data$rings + 1.5
